Changes from jTDS 0.8.1
=========================

07/25/2004 - Brian Heineman
 o Applied patch [991684] Implement named pipe IPC for SQL Server 6.5; (Thanks
   to David Kilzer <ddkilzer@users.sourceforge.net> for the patch)

07/23/2004 - Brian Heineman
 o Improved ConnectionPoolDataSource exception processing and closed connection
   handling.
 o Applied patch [989791] Workaround for null values in properties; (Thanks to
   Art Gramlich for the original patch)
 o Corrected documentation for the lastUpdateCount connection property.

07/22/2004 - Brian Heineman
 o Added lobBuffer parameter to control the memory used by LOB's.
 o Updated FAQ documentation with new parameter information and TDS protocol
   support.
 o Corrected bug in Blob and Clob truncate() methods that caused a
   NullPointerException to be thrown for disk based LOBs.
 o Corrected bug in TestBase where InputStreams and Readers were not being
   closed.
 o Added test for bug [945462] getResultSet() return null if you use
   scrollable/updatable

07/21/2004 - Brian Heineman
 o Added test for bug [994988] Network error when null is returned via int
   output parm
 o Corrected bug [994916] datetime decoding in TdsData.java; Added tests to
   ensure this functionality continues to work in the future.
 o Added test for bug [983432] Prepared call doesn't work with jTDS 0.8
 o Added test for bug [981958] PreparedStatement doesn't work correctly

07/20/2004 - Brian Heineman
 o Added test for bug [974284] retval on callable statement isn't handled
   correctly
 o Added test for bug [994888] Callable statement and Float output parameter

07/19/2004 - Brian Heineman
 o Applied patch in bug [992971] Decimal testcase fails with sql7 (Thanks to
   Mike Hutchinson for the patch)
 o Corrected bug introduced in Clob optimization.
 o Added test for bug [992715] wasnull() always returns false
 o Added test for bug [991640] java.sql.Date error and RAISERROR problem

07/17/2004 - Brian Heineman